semi_project - 전체 수정

--- a/semi_project/css/register.css
+++ b/semi_project/css/register.css
@@ -1,16 +1,47 @@
-.frm{
+/*회원가입 폼*/
+
+.frm2{
 	width: 1100px;
 	margin: 0 auto;
 	margin-top: 50px;
 }
-tr > td{
+tr > td, th{
 	padding: 10px;
+	border: 1px solid #ccc;
 }
+th{
+	border-right: 0;
+	border-bottom: 0;
+}
+th:last-child{
+	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc;
+	text-align: left;
+}
+tr > td{
+	border-bottom: 0;
+}
+tr:nth-child(14) > th:nth-child(2){
+	border-bottom: 0;
+}
+tr:nth-child(15) > th:nth-child(1){
+	border-bottom: 1px solid #ccc;
+}
+.post{
+	padding: 5px;
+}
+.frm2 > table > caption{
+	font-size: 20px;
+	margin: 10px;
+} 
 .clearfix:after{
 	clear: both;
 	content: '';
 	display:block;
 	float: none;
+}
+.form-control{
+	padding: 5px;
 }
 .pull-left{
 	float: left;
@@ -20,25 +51,27 @@ tr > td{
 }
 .tel1,.tel2,.tel3,.tel4,.tel5,.tel6{
 	width: 50px;
+	padding: 5px;
 }
 .ymd_s{
 	width: 50px;
 	margin-right: 12px;
+	padding: 5px;
 }
 .ymd_wrap{
 	position: relative;
 }
 .la_year{
 	position: absolute;
-	left: 65px;
+	left: 75px;
 }
 .la_mon{
 	position: absolute;
-	left: 137px;
+	left: 153px;
 }
 .la_day{
 	position: absolute;
-	left: 210px;
+	left: 235px;
 }
 .id_check{
 	margin-bottom: 10px;
@@ -61,3 +94,34 @@ tr > td{
 .textarea_wrap{
 	width: 500px;
 }
+.radio{
+	width: 200px;
+	margin-top: 5px;
+}
+.op_radio{
+	width: 200px;
+}
+.ra_label{
+	position: relative;
+	width: 100px;
+	margin-right:30px;
+}
+.select1{
+	position: absolute;
+	left: 20px;
+	top: -3px;
+	width: 30px;
+}
+.select2{
+	position: absolute;
+	left: 20px;
+	top: -3px;
+	width: 30px;
+}
+.btn_register{
+	padding: 10px;
+	width: 70px;
+	height: 40px;
+	line-height: 15px;
+}
+/*회원가입 폼 끝*/
