--- a/semi_project/css/include.css
+++ b/semi_project/css/include.css
@@ -1,5 +1,13 @@
 /* 헤더 */
-
+.pull-left{
+	float: left;
+}
+.clearfix::after{
+	display: block;
+	content: '';
+	clear: both;
+	float: none;
+}
 #header{
 	width: 1100px;
 	height: 150px;
@@ -7,7 +15,7 @@
 	position: relative
 }
 .inner{
-	width: 350px;
+	width: 250px;
 	height: 100px;
 	position: absolute;
 	right: 0px;
@@ -23,8 +31,7 @@
 .frm{
 	width: 270px;
 	height: 26px;
-	margin-top: 15px;
-	margin-right: 50px;
+	margin-top: 15px;   
 }
 
 .search_txt{
@@ -35,11 +42,8 @@
 	height: 30px;
 }
 .r_btn{
-	width: 350px;
+	width: 250px;
 	text-align: right;
-}
-.r_btn{
-	width: 350px;
 }
 .lnb_line{
 	display: inline-block;
@@ -57,8 +61,7 @@
 	position: fixed;
 	top: 0;
 	z-index: 10;
-	border-bottom: 2px solid #ccc;
-	background: #fff
+	background: #fff;
 }
 .gnb_li{
 	display: inline-block;
@@ -126,7 +129,9 @@
 	border: solid 1px #ccc;
 
 }
-
+.hr2{
+    border: 2px solid #111;
+}
 /* footer */
 .footer-wrap{
 	width: 100%;
@@ -192,7 +197,4 @@
 .f_info li a{
 	color: #000;
 	font-weight: bold;
-}
-.pass_re{
-	
 }
