--- a/semi_project/css/login.css
+++ b/semi_project/css/login.css
@@ -8,12 +8,14 @@
 	position: absolute;
 	left: 50%;
 	top: 3%;
-	margin-left: -45px;
+	font-size: 20px;
+	margin-left: -75px;
 	text-align: center;
+	font-size: 20px;
 }
 .login_wrap{
-	width: 400px;
-	height: 400px;
+	width: 450px;
+	height: 450px;
 	margin: 50px auto;
 	border: 2px solid #ccc;
 }
@@ -23,7 +25,7 @@
 .id{
 	width: 90%;
 	margin: 10px;
-	margin-top: 40px;
+	margin-top: 70px;
 	padding: 10px;
 	border: 1px solid #ccc;
 }
@@ -72,10 +74,12 @@
 	display: inline-block;
 
 }
+
 .link{
 	width: 100%;
 	height: 37px;
 }
+
 .join_btn{
 	display: block;
 	width: 95%;
@@ -86,8 +90,100 @@
 	background-color: #8a8a8a;
 	border: 1px solid #8a8a8a;
 	color: #fff;
+	transition: all 0.3s;
 }
 .join_btn:hover{
-	background-color: #fff;
-	color: #111;
+	transition: all 0.3s;
+}
+.p_container {
+    width: 1100px;
+    height: 330px;
+    margin: 0 auto;
+}
+
+.page_path {
+    width: 100%;
+}
+
+.page_home {
+    display: inline-block;
+}
+
+.page_home img {
+    width: 45px;
+    height: 53px;
+}
+
+.page_nav {
+    display: inline-block;
+    vertical-align: top;
+    width: 95%;
+}
+
+.m_gnb {
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    transition: all 0.4s;
+}
+
+.m_gnb2 {
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    background: #fff;
+}
+
+.page_nav_li {
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    width: 208px;
+    height: 53px;
+    margin-left: -4px;
+    line-height: 53px;
+    border: 1px solid #ccc;
+    border-left: 0px;
+    background: url(../img/sel_bl.png) no-repeat right center;
+}
+
+.page_nav_li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: #000;
+}
+
+.lnb {
+    display: none;
+    position: relative;
+    width: 100%;
+    background-color: #fcf9fc;
+    z-index: 10;
+}
+
+.lnb_list {
+    width: 100%;
+    margin-left: -1px;
+    border: 1px solid #ccc;
+    border-top: 0px;
+    z-index: 10;
+}
+.login_text{
+	width: 1100px;
+	height: 200px;
+	margin: 50px auto;
+}
+.login_text > p:nth-child(1){
+	font-size: 30px;
+	margin-bottom: 20px;
+}
+.login_text > p:nth-child(3){
+	font-size: 40px;
+	text-align: center;
+	margin: 40px 0;
+}
+.login_text > p:nth-child(4){
+	font-size: 15px;
+	text-align: center;
 }
